# verdant

./: CMakeLists.txt  main.cpp
design/: annotations.md
sources/lexer/: Lexer.cpp  Lexer.hpp
sources/lexer/types/: String.cpp  String.hpp  Token.cpp  Token.hpp  Word.cpp  Word.hpp
